vertical align mismatch fixed

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@ body {
 }
 
 .block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 300px;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -62,7 +65,7 @@ body {
   }
 }
 
-@media (min-width:1200px) {
+@media (min-width:900px) {
   .block {
     flex-basis: calc(100% / 3);
   }
@@ -76,6 +79,6 @@ body {
   }
 
   .block-6 {
-    order: 1
+    order: 1;
   }
 }
